--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="container nav-container">
-            <div class="logo">INFINITY CREATION</div>
+            <a href="#home" class="logo">
+                <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
+            </a>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -249,7 +251,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="logo">INFINITY CREATION</div>
+                <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
                 <p>Crafting cinematic excellence since 2015</p>
                 <div class="social-links">
                     <a href="#" class="social-link" aria-label="Facebook">📘</a>
