--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="container nav-container">
             <a href="#home" class="logo">
                 <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
+                <span class="logo-text">INFINITY CREATION</span>
             </a>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
