--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container nav-container">
             <a href="#home" class="logo">
                 <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
-                <span class="logo-text">INFINITY CREATION</span>
+                <span class="logo-text">INFINITY CREATIONS</span>
             </a>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
@@ -41,7 +41,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <p class="hero-subtitle">Cinematic Excellence</p>
-            <h1 class="hero-title">INFINITY CREATION</h1>
+            <h1 class="hero-title">INFINITY CREATIONS</h1>
             <p class="hero-description">
                 Where stories come to life through the art of filmmaking
             </p>
