added service card

--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
                         your vision to life with artistic excellence.
                     </p>
                 </div>
+                <div class="service-card fade-in">
+                    <div class="service-icon">💍</div>
+                    <h3>Wedding Films</h3>
+                    <p>
+                        Capture your special day with cinematic wedding
+                        videography that preserves every precious moment forever.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
