--- a/index.html
+++ b/index.html
@@ -166,15 +166,15 @@
                 <p>A showcase of our finest cinematic creations</p>
             </div>
             <div class="portfolio-grid">
-                <div class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #1a1a1a, #2a2a2a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        🎬</div>
+                <a href="https://youtu.be/JlL1MrSf8ow?si=74cBCVDgPy7aXO0E" target="_blank" rel="noopener noreferrer"
+                    class="portfolio-item fade-in">
+                    <img src="https://img.youtube.com/vi/JlL1MrSf8ow/maxresdefault.jpg" alt="The Silent Echo"
+                        class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>The Silent Echo</h3>
                         <p class="portfolio-category">Feature Film</p>
                     </div>
-                </div>
+                </a>
                 <div class="portfolio-item fade-in">
                     <div class="portfolio-image"
                         style="background: linear-gradient(135deg, #2a2a2a, #1a1a1a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
