--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     <img src="https://img.youtube.com/vi/JlL1MrSf8ow/maxresdefault.jpg" alt="The Silent Echo"
                         class="portfolio-image">
                     <div class="portfolio-overlay">
-                        <h3>The Silent Echo</h3>
-                        <p class="portfolio-category">Feature Film</p>
+                        <h3>DOM- Awaiting Equality</h3>
+                        <p class="portfolio-category">by Prabin Sharma</p>
                     </div>
                 </a>
                 <div class="portfolio-item fade-in">
