--- a/index.html
+++ b/index.html
@@ -175,15 +175,16 @@
                         <p class="portfolio-category">by Prabin Sharma</p>
                     </div>
                 </a>
-                <div class="portfolio-item fade-in">
+                <a href="https://www.facebook.com/share/v/1aTzAgEN2S/" target="_blank" rel="noopener noreferrer"
+                    class="portfolio-item fade-in">
                     <div class="portfolio-image"
                         style="background: linear-gradient(135deg, #2a2a2a, #1a1a1a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
                         🎥</div>
                     <div class="portfolio-overlay">
-                        <h3>Urban Pulse</h3>
-                        <p class="portfolio-category">Commercial</p>
+                        <h3>The EMI Story</h3>
+                        <p class="portfolio-category">by Prabin Sharma</p>
                     </div>
-                </div>
+                </a>
                 <div class="portfolio-item fade-in">
                     <div class="portfolio-image"
                         style="background: linear-gradient(135deg, #1a1a1a, #333333); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
