--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         content="Infinity Creation - Premier film production studio crafting timeless cinematic experiences">
     <title>Infinity Creation | Film Production Studio</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="Infinity-White.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
