--- a/index.html
+++ b/index.html
@@ -236,6 +236,38 @@
                     <h2>Let's Create Together</h2>
                     <p>Ready to bring your vision to life? Get in touch with us</p>
                 </div>
+
+                <!-- Contact Information Cards -->
+                <div class="contact-info-grid fade-in">
+                    <div class="contact-info-card">
+                        <div class="contact-icon">📧</div>
+                        <h3>Email Us</h3>
+                        <p>info@infinitycreations.com</p>
+                        <p>contact@infinitycreations.com</p>
+                    </div>
+                    <div class="contact-info-card">
+                        <div class="contact-icon">📱</div>
+                        <h3>Call Us</h3>
+                        <p>+977 9876543210</p>
+                        <p>+977 9765432109</p>
+                    </div>
+                    <div class="contact-info-card">
+                        <div class="contact-icon">📍</div>
+                        <h3>Visit Us</h3>
+                        <p>Kathmandu, Nepal</p>
+                        <p>Naxal, Kathmandu 44600</p>
+                    </div>
+                    <div class="contact-info-card">
+                        <div class="contact-icon">🌐</div>
+                        <h3>Follow Us</h3>
+                        <div class="contact-social-links">
+                            <a href="#" class="contact-social-link" aria-label="Facebook">📘</a>
+                            <a href="#" class="contact-social-link" aria-label="Instagram">📷</a>
+                            <a href="#" class="contact-social-link" aria-label="YouTube">📺</a>
+                        </div>
+                    </div>
+                </div>
+
                 <form class="contact-form fade-in" id="contactForm">
                     <div class="form-group">
                         <label for="name">Your Name</label>
