--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -261,9 +264,16 @@
                         <div class="contact-icon">🌐</div>
                         <h3>Follow Us</h3>
                         <div class="contact-social-links">
-                            <a href="#" class="contact-social-link" aria-label="Facebook">📘</a>
-                            <a href="#" class="contact-social-link" aria-label="Instagram">📷</a>
-                            <a href="#" class="contact-social-link" aria-label="YouTube">📺</a>
+                            <a href="#" class="contact-social-link" aria-label="Facebook"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="Instagram"><i
+                                    class="fab fa-instagram"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="TikTok"><i
+                                    class="fab fa-tiktok"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
+                                    class="fab fa-x-twitter"></i></a>
                         </div>
                     </div>
                 </div>
@@ -299,11 +309,11 @@
                 <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
                 <p>Crafting cinematic excellence since 2015</p>
                 <div class="social-links">
-                    <a href="#" class="social-link" aria-label="Facebook">📘</a>
-                    <a href="#" class="social-link" aria-label="Instagram">📷</a>
-                    <a href="#" class="social-link" aria-label="Twitter">🐦</a>
-                    <a href="#" class="social-link" aria-label="YouTube">📺</a>
-                    <a href="#" class="social-link" aria-label="Vimeo">🎬</a>
+                    <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-link" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="social-link" aria-label="Vimeo"><i class="fab fa-vimeo-v"></i></a>
                 </div>
             </div>
             <p class="copyright">&copy; 2024 Infinity Creation. All rights reserved.</p>
