--- a/index.html
+++ b/index.html
@@ -263,19 +263,21 @@
                     <div class="contact-info-card">
                         <div class="contact-icon">🌐</div>
                         <h3>Follow Us</h3>
-                        <div class="contact-social-row">
-                            <a href="#" class="contact-social-link" aria-label="Facebook"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="Instagram"><i
-                                    class="fab fa-instagram"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="TikTok"><i
-                                    class="fab fa-tiktok"></i></a>
-                        </div>
-                        <div class="contact-social-row">
-                            <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
-                                    class="fab fa-x-twitter"></i></a>
+                        <div class="social-columns-container">
+                            <div class="contact-social-col">
+                                <a href="#" class="contact-social-link" aria-label="Facebook"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <a href="#" class="contact-social-link" aria-label="Instagram"><i
+                                        class="fab fa-instagram"></i></a>
+                                <a href="#" class="contact-social-link" aria-label="TikTok"><i
+                                        class="fab fa-tiktok"></i></a>
+                            </div>
+                            <div class="contact-social-col">
+                                <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
+                                        class="fab fa-linkedin-in"></i></a>
+                                <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
+                                        class="fab fa-x-twitter"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
