--- a/index.html
+++ b/index.html
@@ -263,46 +263,44 @@
                     <div class="contact-info-card">
                         <div class="contact-icon">🌐</div>
                         <h3>Follow Us</h3>
-                        <div class="social-columns-container">
-                            <div class="contact-social-col">
-                                <a href="#" class="contact-social-link" aria-label="Facebook"><i
-                                        class="fab fa-facebook-f"></i></a>
-                                <a href="#" class="contact-social-link" aria-label="Instagram"><i
-                                        class="fab fa-instagram"></i></a>
-                                <a href="#" class="contact-social-link" aria-label="TikTok"><i
-                                        class="fab fa-tiktok"></i></a>
-                            </div>
-                            <div class="contact-social-col">
-                                <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
-                                        class="fab fa-linkedin-in"></i></a>
-                                <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
-                                        class="fab fa-x-twitter"></i></a>
-                            </div>
+                        <h3>Follow Us</h3>
+                        <div class="contact-social-grid">
+                            <a href="#" class="contact-social-link" aria-label="Facebook"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="Instagram"><i
+                                    class="fab fa-instagram"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="TikTok"><i
+                                    class="fab fa-tiktok"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
+                                    class="fab fa-x-twitter"></i></a>
                         </div>
                     </div>
                 </div>
-
-                <form class="contact-form fade-in" id="contactForm">
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="project">Project Type</label>
-                        <input type="text" id="project" name="project"
-                            placeholder="e.g., Feature Film, Commercial, Documentary">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Tell Us About Your Project</label>
-                        <textarea id="message" name="message" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-button">Send Message</button>
-                </form>
             </div>
+
+            <form class="contact-form fade-in" id="contactForm">
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="project">Project Type</label>
+                    <input type="text" id="project" name="project"
+                        placeholder="e.g., Feature Film, Commercial, Documentary">
+                </div>
+                <div class="form-group">
+                    <label for="message">Tell Us About Your Project</label>
+                    <textarea id="message" name="message" required></textarea>
+                </div>
+                <button type="submit" class="submit-button">Send Message</button>
+            </form>
+        </div>
         </div>
     </section>
 
