--- a/index.html
+++ b/index.html
@@ -263,13 +263,15 @@
                     <div class="contact-info-card">
                         <div class="contact-icon">🌐</div>
                         <h3>Follow Us</h3>
-                        <div class="contact-social-grid">
+                        <div class="contact-social-group">
                             <a href="#" class="contact-social-link" aria-label="Facebook"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a href="#" class="contact-social-link" aria-label="Instagram"><i
                                     class="fab fa-instagram"></i></a>
                             <a href="#" class="contact-social-link" aria-label="TikTok"><i
                                     class="fab fa-tiktok"></i></a>
+                        </div>
+                        <div class="contact-social-group">
                             <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
                                     class="fab fa-linkedin-in"></i></a>
                             <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
