--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h2>Crafting Timeless Stories</h2>
                     <p>
                         At Infinity Creation, we believe every frame tells a story.
-                        With over a decade of experience in the film industry, our
+                        With years of experience in the film industry, our
                         passionate team transforms visions into cinematic masterpieces.
                     </p>
                     <p>
@@ -80,7 +80,7 @@
                         <div class="stat-label">Projects</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">10+</div>
+                        <div class="stat-number">2</div>
                         <div class="stat-label">Years</div>
                     </div>
                     <div class="stat-card">
