--- a/index.html
+++ b/index.html
@@ -187,15 +187,16 @@
                         <p class="portfolio-category">by Prabin Sharma</p>
                     </div>
                 </a>
-                <div class="portfolio-item fade-in">
+                <a href="https://youtu.be/wBX2CeK4lO0?si=xdpAzE2hwrnoRdEG" target="_blank" rel="noopener noreferrer"
+                    class="portfolio-item fade-in">
                     <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #1a1a1a, #333333); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        🎞️</div>
-                    <div class="portfolio-overlay">
-                        <h3>Voices of Tomorrow</h3>
-                        <p class="portfolio-category">Documentary</p>
+                        style="background-image: url('https://img.youtube.com/vi/wBX2CeK4lO0/maxresdefault.jpg'); background-size: cover; background-position: center;">
                     </div>
-                </div>
+                    <div class="portfolio-overlay">
+                        <h3>Khewatiya</h3>
+                        <p class="portfolio-category">By Prabin Sharma</p>
+                    </div>
+                </a>
                 <div class="portfolio-item fade-in">
                     <div class="portfolio-image"
                         style="background: linear-gradient(135deg, #2a2a2a, #0a0a0a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
