--- a/index.html
+++ b/index.html
@@ -197,15 +197,16 @@
                         <p class="portfolio-category">By Prabin Sharma</p>
                     </div>
                 </a>
-                <div class="portfolio-item fade-in">
+                <a href="https://youtu.be/V48yuH5eHqU?si=aYMXl8RSjMCWs_de" target="_blank" rel="noopener noreferrer"
+                    class="portfolio-item fade-in">
                     <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #2a2a2a, #0a0a0a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        📹</div>
-                    <div class="portfolio-overlay">
-                        <h3>Innovation Summit</h3>
-                        <p class="portfolio-category">Corporate</p>
+                        style="background-image: url('https://img.youtube.com/vi/V48yuH5eHqU/maxresdefault.jpg'); background-size: cover; background-position: center;">
                     </div>
-                </div>
+                    <div class="portfolio-overlay">
+                        <h3>Kumhar: Dream Shaped By Hands</h3>
+                        <p class="portfolio-category">by Sanjay Chaudhary</p>
+                    </div>
+                </a>
                 <div class="portfolio-item fade-in">
                     <div class="portfolio-image"
                         style="background: linear-gradient(135deg, #0a0a0a, #2a2a2a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
