--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <a href="https://www.facebook.com/share/v/1aTzAgEN2S/" target="_blank" rel="noopener noreferrer"
                     class="portfolio-item fade-in">
                     <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #2a2a2a, #1a1a1a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        🎥</div>
+                        style="background-image: url('images/emi-story.png'); background-size: cover; background-position: center;">
+                    </div>
                     <div class="portfolio-overlay">
                         <h3>The EMI Story</h3>
                         <p class="portfolio-category">by Prabin Sharma</p>
