changed website to react

--- a/index.html
+++ b/index.html
@@ -1,327 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Infinity Creation - Premier film production studio crafting timeless cinematic experiences">
-    <title>Infinity Creation | Film Production Studio</title>
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="Infinity-White.png">
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-    <!-- Navigation -->
-    <nav class="navbar" id="navbar">
-        <div class="container nav-container">
-            <a href="#home" class="logo">
-                <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
-                <span class="logo-text">INFINITY CREATIONS</span>
-            </a>
-            <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#services" class="nav-link">Services</a></li>
-                <li><a href="#portfolio" class="nav-link">Portfolio</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-content">
-            <p class="hero-subtitle">Cinematic Excellence</p>
-            <h1 class="hero-title">INFINITY CREATIONS</h1>
-            <p class="hero-description">
-                Where stories come to life through the art of filmmaking
-            </p>
-            <a href="#contact" class="cta-button">Start Your Project</a>
-        </div>
-        <div class="film-strip"></div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about section" id="about">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-text fade-in">
-                    <h2>Crafting Timeless Stories</h2>
-                    <p>
-                        At Infinity Creation, we believe every frame tells a story.
-                        With years of experience in the film industry, our
-                        passionate team transforms visions into cinematic masterpieces.
-                    </p>
-                    <p>
-                        From concept to completion, we bring unparalleled creativity,
-                        technical expertise, and artistic vision to every project.
-                        Our commitment to excellence has made us a trusted name in
-                        film production.
-                    </p>
-                </div>
-                <div class="stats-grid fade-in">
-                    <div class="stat-card">
-                        <div class="stat-number">100+</div>
-                        <div class="stat-label">Projects</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">2</div>
-                        <div class="stat-label">Years</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">100%</div>
-                        <div class="stat-label">Dedication</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services section" id="services">
-        <div class="container">
-            <div class="section-title fade-in">
-                <h2>Our Services</h2>
-                <p>Comprehensive film production solutions tailored to your vision</p>
-            </div>
-            <div class="services-grid">
-                <div class="service-card fade-in">
-                    <div class="service-icon">🎬</div>
-                    <h3>Film Production</h3>
-                    <p>
-                        Full-scale film production from pre-production planning
-                        to post-production editing, delivering cinematic excellence.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">🎥</div>
-                    <h3>Commercial Videos</h3>
-                    <p>
-                        High-impact commercial content that captures attention
-                        and drives engagement for your brand.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">🎞️</div>
-                    <h3>Documentary Films</h3>
-                    <p>
-                        Compelling documentary storytelling that brings real
-                        stories to life with authenticity and impact.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">✂️</div>
-                    <h3>Post-Production</h3>
-                    <p>
-                        Expert editing, color grading, VFX, and sound design
-                        to perfect every frame of your project.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">📹</div>
-                    <h3>Corporate Videos</h3>
-                    <p>
-                        Professional corporate video production for internal
-                        communications, training, and marketing.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">🎭</div>
-                    <h3>Creative Direction</h3>
-                    <p>
-                        Strategic creative direction and consulting to bring
-                        your vision to life with artistic excellence.
-                    </p>
-                </div>
-                <div class="service-card fade-in">
-                    <div class="service-icon">💍</div>
-                    <h3>Wedding Films</h3>
-                    <p>
-                        Capture your special day with cinematic wedding
-                        videography that preserves every precious moment forever.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section class="portfolio section" id="portfolio">
-        <div class="container">
-            <div class="section-title fade-in">
-                <h2>Featured Works</h2>
-                <p>A showcase of our finest cinematic creations</p>
-            </div>
-            <div class="portfolio-grid">
-                <a href="https://youtu.be/JlL1MrSf8ow?si=74cBCVDgPy7aXO0E" target="_blank" rel="noopener noreferrer"
-                    class="portfolio-item fade-in">
-                    <img src="https://img.youtube.com/vi/JlL1MrSf8ow/maxresdefault.jpg" alt="The Silent Echo"
-                        class="portfolio-image">
-                    <div class="portfolio-overlay">
-                        <h3>DOM- Awaiting Equality</h3>
-                        <p class="portfolio-category">by Prabin Sharma</p>
-                    </div>
-                </a>
-                <a href="https://www.facebook.com/share/v/1aTzAgEN2S/" target="_blank" rel="noopener noreferrer"
-                    class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background-image: url('images/emi-story.png'); background-size: cover; background-position: center;">
-                    </div>
-                    <div class="portfolio-overlay">
-                        <h3>The EMI Story</h3>
-                        <p class="portfolio-category">by Prabin Sharma</p>
-                    </div>
-                </a>
-                <a href="https://youtu.be/wBX2CeK4lO0?si=xdpAzE2hwrnoRdEG" target="_blank" rel="noopener noreferrer"
-                    class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background-image: url('https://img.youtube.com/vi/wBX2CeK4lO0/maxresdefault.jpg'); background-size: cover; background-position: center;">
-                    </div>
-                    <div class="portfolio-overlay">
-                        <h3>Khewatiya</h3>
-                        <p class="portfolio-category">By Prabin Sharma</p>
-                    </div>
-                </a>
-                <a href="https://youtu.be/V48yuH5eHqU?si=aYMXl8RSjMCWs_de" target="_blank" rel="noopener noreferrer"
-                    class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background-image: url('https://img.youtube.com/vi/V48yuH5eHqU/maxresdefault.jpg'); background-size: cover; background-position: center;">
-                    </div>
-                    <div class="portfolio-overlay">
-                        <h3>Kumhar: Dream Shaped By Hands</h3>
-                        <p class="portfolio-category">by Sanjay Chaudhary</p>
-                    </div>
-                </a>
-                <div class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #0a0a0a, #2a2a2a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        🎭</div>
-                    <div class="portfolio-overlay">
-                        <h3>Midnight Dreams</h3>
-                        <p class="portfolio-category">Short Film</p>
-                    </div>
-                </div>
-                <div class="portfolio-item fade-in">
-                    <div class="portfolio-image"
-                        style="background: linear-gradient(135deg, #333333, #1a1a1a); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
-                        ✨</div>
-                    <div class="portfolio-overlay">
-                        <h3>Ethereal Beauty</h3>
-                        <p class="portfolio-category">Music Video</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact section" id="contact">
-        <div class="container">
-            <div class="contact-container">
-                <div class="section-title fade-in">
-                    <h2>Let's Create Together</h2>
-                    <p>Ready to bring your vision to life? Get in touch with us</p>
-                </div>
-
-                <!-- Contact Information Cards -->
-                <div class="contact-info-grid fade-in">
-                    <div class="contact-info-card">
-                        <div class="contact-icon">📧</div>
-                        <h3>Email Us</h3>
-                        <p>info@infinitycreations.com</p>
-                        <p>contact@infinitycreations.com</p>
-                    </div>
-                    <div class="contact-info-card">
-                        <div class="contact-icon">📱</div>
-                        <h3>Call Us</h3>
-                        <p>+977 9876543210</p>
-                        <p>+977 9765432109</p>
-                    </div>
-                    <div class="contact-info-card">
-                        <div class="contact-icon">📍</div>
-                        <h3>Visit Us</h3>
-                        <p>Kathmandu, Nepal</p>
-                        <p>Naxal, Kathmandu 44600</p>
-                    </div>
-                    <div class="contact-info-card">
-                        <div class="contact-icon">🌐</div>
-                        <h3>Follow Us</h3>
-                        <div class="contact-social-group">
-                            <a href="#" class="contact-social-link" aria-label="Facebook"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="Instagram"><i
-                                    class="fab fa-instagram"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="TikTok"><i
-                                    class="fab fa-tiktok"></i></a>
-                        </div>
-                        <div class="contact-social-group">
-                            <a href="#" class="contact-social-link" aria-label="LinkedIn"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a href="#" class="contact-social-link" aria-label="X (Twitter)"><i
-                                    class="fab fa-x-twitter"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <form class="contact-form fade-in" id="contactForm">
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="project">Project Type</label>
-                        <input type="text" id="project" name="project"
-                            placeholder="e.g., Feature Film, Commercial, Documentary">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Tell Us About Your Project</label>
-                        <textarea id="message" name="message" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-button">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <img src="Infinity-White.png" alt="Infinity Creation" class="logo-img">
-                <p>Crafting cinematic excellence since 2015</p>
-                <div class="social-links">
-                    <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-link" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-                    <a href="#" class="social-link" aria-label="Vimeo"><i class="fab fa-vimeo-v"></i></a>
-                </div>
-            </div>
-            <p class="copyright">&copy; 2024 Infinity Creation. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>web-infinity</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
